@@ -1,11 +1,11 @@
 //
-// File: test_eigen.cpp
+// File: test_matrices.cpp
 // Created by: Julien Dutheil
-// Created on: Thu Feb 5 07:50 2009
+// Created on: Nov 2011
 //
 
 /*
-Copyright or © or Copr. Bio++Development Team, (November 17, 2004)
+Copyright or © or Copr. Bio++ Development Team, (November 17, 2004)
 
 This software is a computer program whose purpose is to provide classes
 for numerical calculus. This file is part of the Bio++ project.
